--- a/index.abc.html
+++ b/index.abc.html
@@ -13,16 +13,14 @@
     --brand:#2563eb; --ok:#16a34a; --warn:#b45309; --danger:#ef4444;
     --radius:16px; --shadow:0 12px 28px rgba(2,6,23,.06);
   }
-  /* ===== Base ===== */
   *{box-sizing:border-box}
   html, body { height:100%; }
   body{
     margin:0; font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;
     background:var(--bg); color:var(--text);
-    overflow-x:hidden; /* nunca corta lateral */
+    overflow-x:hidden;
   }
 
-  /* ===== Header fixo e layout tela cheia ===== */
   header{
     position:sticky; top:0; z-index:10;
     display:flex; align-items:center; gap:16px;
@@ -31,35 +29,22 @@
   header img{ height:56px; max-width:100%; }
   header h1{ margin:0; font-size:clamp(1.05rem, 1.2vw + .8rem, 1.6rem); font-weight:700; letter-spacing:.2px }
 
-  .page{
-    min-height:calc(100vh - 86px); /* ocupa a tela toda abaixo do header */
-    width:100vw; max-width:100vw;
-  }
+  .page{ min-height:calc(100vh - 86px); width:100vw; max-width:100vw; }
+  .container{ width:100%; max-width:100%; padding:18px 20px 28px; margin:0 auto; }
 
-  /* ===== Container fluido (100% desktop) ===== */
-  .container{
-    width:100%; max-width:100%; padding:18px 20px 28px; margin:0 auto;
-  }
-
-  /* ===== Grids ===== */
   .grid{ display:grid; gap:16px }
-  /* desktop grande: 6 col nas filtros, 3 col nas listas */
   .filters{ grid-template-columns:repeat(6, minmax(0,1fr)); }
   .lists{ grid-template-columns:repeat(3, minmax(0,1fr)); }
-
-  /* tablets */
   @media (max-width:1200px){
     .filters{ grid-template-columns:repeat(4, minmax(0,1fr)); }
     .lists{ grid-template-columns:repeat(2, minmax(0,1fr)); }
   }
-  /* mobile */
   @media (max-width:768px){
     .filters{ grid-template-columns:1fr; }
     .lists{ grid-template-columns:1fr; }
     .container{ padding:14px 12px 22px; }
   }
 
-  /* ===== Cards/KPIs ===== */
   .card{ background:var(--card); border:1px solid var(--line);
          border-radius:var(--radius); box-shadow:var(--shadow); overflow:visible }
   .card.pad{ padding:14px }
@@ -77,7 +62,6 @@
 
   .section-title{ margin:18px 4px 10px; font-size:.95rem; color:#111827; font-weight:700 }
 
-  /* ===== Gráfico responsivo sem corte ===== */
   #wrapGraf{ padding:10px }
   #graficoVendas{
     display:none;
@@ -86,12 +70,10 @@
   }
   canvas{ max-width:100%; height:auto !important; }
 
-  /* ===== Listas ===== */
   .item{ padding:10px 12px; border:1px dashed var(--line); border-radius:12px; margin-bottom:10px; background:#fff;
          word-break:break-word; overflow-wrap:anywhere; }
   .muted{ color:var(--muted) }
 
-  /* ===== Estados / feedback ===== */
   .loader{ display:flex; align-items:center; justify-content:center; gap:10px; padding:22px; color:var(--muted) }
   .spinner{ width:18px; height:18px; border:3px solid var(--line); border-top-color:var(--brand); border-radius:50%; animation:spin .8s linear infinite }
   @keyframes spin{ to{ transform:rotate(360deg) } }
@@ -111,7 +93,14 @@
     <div class="grid filters">
       <div class="card pad">
         <label>🏢 Empresa</label>
-        <select id="filtroEmpresa"><option value="">Todas</option></select>
+        <select id="filtroEmpresa">
+          <option value="MERCATTO">MERCATTO (padrão)</option>
+          <option value="PADARIA">PADARIA (carregando…)</option>
+          <option value="DELICIA">DELICIA (carregando…)</option>
+          <option value="VILLA GOURMET">VILLA GOURMET (carregando…)</option>
+          <option value="M. KIDS">M. KIDS (carregando…)</option>
+          <option value="">Todas (depois que carregar)</option>
+        </select>
       </div>
       <div class="card pad">
         <label>🔍 Busca</label>
@@ -125,29 +114,16 @@
         <label>📅 Fim</label>
         <input id="dataFim" type="date" />
       </div>
-      <!-- Espaços extras preenchem e mantêm 6 colunas sem “quebrar” no desktop -->
       <div class="card pad" style="visibility:hidden"></div>
       <div class="card pad" style="visibility:hidden"></div>
     </div>
 
     <!-- KPIs -->
     <div class="kpis">
-      <div class="card kpi">
-        <h3>Faturamento</h3>
-        <p id="kpiFat">R$ 0,00</p>
-      </div>
-      <div class="card kpi">
-        <h3>Lucro</h3>
-        <p id="kpiLuc">R$ 0,00</p>
-      </div>
-      <div class="card kpi">
-        <h3>Qtd. Registros</h3>
-        <p id="kpiQtd">0</p>
-      </div>
-      <div class="card kpi">
-        <h3>Ticket Médio</h3>
-        <p id="kpiTicket">R$ 0,00</p>
-      </div>
+      <div class="card kpi"><h3>Faturamento</h3><p id="kpiFat">R$ 0,00</p></div>
+      <div class="card kpi"><h3>Lucro</h3><p id="kpiLuc">R$ 0,00</p></div>
+      <div class="card kpi"><h3>Qtd. Registros</h3><p id="kpiQtd">0</p></div>
+      <div class="card kpi"><h3>Ticket Médio</h3><p id="kpiTicket">R$ 0,00</p></div>
     </div>
 
     <!-- Gráfico -->
@@ -165,7 +141,7 @@
 
     <div class="section-title">Registros</div>
     <div class="card pad">
-      <div id="statusBox" class="loader"><div class="spinner"></div> Carregando dados…</div>
+      <div id="statusBox" class="loader"><div class="spinner"></div> Carregando MERCATTO…</div>
       <div id="listaVendas" style="display:none"></div>
     </div>
   </div>
@@ -174,9 +150,11 @@
 <script>
 /* =================== CONFIG =================== */
 const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycbxu0HjXsbvXr9OGYDAEfN8Kqyle4d2GFb26wu8aAcAtfM-RkcILV9AywDjf1Fu8rW_NwQ/exec';
+const EMPRESAS = ['MERCATTO','PADARIA','DELICIA','VILLA GOURMET','M. KIDS'];
 
-/* =================== ESTADO =================== */
-let RAW = [];        // payload.dados
+/* =================== ESTADO (cache por empresa) =================== */
+let CACHE = {};            // { 'MERCATTO': [rows], ... }
+let RAW = [];              // concat de todas carregadas
 let chartVendas = null;
 
 /* =================== UTILS =================== */
@@ -184,39 +162,27 @@ const $$ = sel => document.querySelector(sel);
 const BRL = n => (n||0).toLocaleString('pt-BR',{style:'currency',currency:'BRL'});
 const dBR = iso => !iso ? '' : iso.split('-').reverse().join('/');
 
-/* =================== LOAD =================== */
-async function fetchABC(){
-  const box = $$('#statusBox');
-  box.className='loader';
-  box.innerHTML = '<div class="spinner"></div> Carregando dados…';
-
-  try{
-    const res = await fetch(URL_SCRIPT, { method:'GET' });
-    const txt = await res.text();
-    let json;
-    try { json = JSON.parse(txt); } catch(e){ throw new Error('Resposta inválida do servidor:\n' + txt.slice(0,300)); }
-
-    const arr = Array.isArray(json) ? json : (json.dados || []);
-    if (!arr.length) {
-      box.className='empty';
-      box.textContent = 'Sem dados para o período.';
-      return [];
-    }
-    box.style.display='none';
-    $$('#listaVendas').style.display='block';
-    return arr;
-  }catch(err){
-    box.className='error';
-    box.textContent = 'Erro ao carregar: ' + (err.message || err);
-    console.error(err);
-    return [];
-  }
+async function fetchEmpresa(empresa){
+  const url = empresa ? `${URL_SCRIPT}?empresa=${encodeURIComponent(empresa)}` : URL_SCRIPT;
+  const res = await fetch(url, { method:'GET' });
+  const txt = await res.text();
+  let json;
+  try { json = JSON.parse(txt); } catch(e){ throw new Error('Resposta inválida do servidor:\n' + txt.slice(0,300)); }
+  const arr = Array.isArray(json) ? json : (json.dados || []);
+  return arr.filter(x => x && x.empresa); // sanitiza
 }
 
-function preencherEmpresas(arr){
-  const empresas = [...new Set(arr.map(d=>d.empresa))].sort();
+function marcarEmpresaPronta(empresa){
   const sel = $$('#filtroEmpresa');
-  sel.innerHTML = '<option value="">Todas</option>' + empresas.map(e=>`<option value="${e}">${e}</option>`).join('');
+  [...sel.options].forEach(o=>{
+    if (o.value === empresa) o.textContent = empresa; // remove "(carregando…)"
+  });
+  // habilita "Todas" quando ao menos 2 empresas carregarem
+  const carregadas = Object.keys(CACHE).length;
+  if (carregadas >= 2){
+    const optTodas = [...sel.options].find(o => o.value === '');
+    if (optTodas) optTodas.textContent = 'Todas';
+  }
 }
 
 function setDatasPorFaixa(arr){
@@ -228,13 +194,13 @@ function setDatasPorFaixa(arr){
 
 /* =================== RENDER =================== */
 function aplicar(){
-  const empresa = $$('#filtroEmpresa').value;
+  const empresa = $$('#filtroEmpresa').value; // pode ser '' (todas)
   const busca = ($$('#filtroBusca').value||'').toLowerCase();
   const di = $$('#dataInicio').value;
   const df = $$('#dataFim').value;
 
-  const F = RAW.filter(r=>{
-    if (empresa && r.empresa !== empresa) return false;
+  const base = empresa ? (CACHE[empresa] || []) : RAW;
+  const F = base.filter(r=>{
     if (busca && !String(r.produto||'').toLowerCase().includes(busca)) return false;
     if (di && r.data < di) return false;
     if (df && r.data > df) return false;
@@ -251,7 +217,7 @@ function aplicar(){
   $$('#kpiQtd').textContent = qtd.toLocaleString('pt-BR');
   $$('#kpiTicket').textContent = BRL(ticket);
 
-  desenharGrafico(F, !!empresa);
+  desenharGrafico(F, true);
 
   const byProd = {};
   F.forEach(x=>{
@@ -288,10 +254,14 @@ function aplicar(){
     cont.appendChild(div);
   });
 
+  const box = $$('#statusBox');
   if (!lista.length){
-    $$('#statusBox').style.display='block';
-    $$('#statusBox').className='empty';
-    $$('#statusBox').textContent='Nenhum registro com os filtros atuais.';
+    box.style.display='block';
+    box.className='empty';
+    box.textContent='Nenhum registro com os filtros atuais.';
+  } else {
+    box.style.display='none';
+    $$('#listaVendas').style.display='block';
   }
 }
 
@@ -302,11 +272,6 @@ function renderLista(sel, arr, fmt){
 
 function desenharGrafico(F, mostrar){
   const canvas = $$('#graficoVendas');
-  if (!mostrar){
-    canvas.style.display='none';
-    if (chartVendas) chartVendas.destroy();
-    return;
-  }
   const porDia = {};
   F.forEach(x=> porDia[x.data] = (porDia[x.data]||0) + (x.faturamento||0));
   const labels = Object.keys(porDia).sort();
@@ -324,16 +289,72 @@ function desenharGrafico(F, mostrar){
   canvas.style.display='block';
 }
 
-/* =================== INIT =================== */
-window.addEventListener('load', async ()=>{
-  RAW = await fetchABC();
-  if (!RAW.length) return;
-  preencherEmpresas(RAW);
-  setDatasPorFaixa(RAW);
-  aplicar();
+/* =================== BOOTSTRAP =================== */
+async function boot(){
+  const box = $$('#statusBox');
+
+  // 1) Carrega MERCATTO primeiro (render imediato)
+  try{
+    box.innerHTML = '<div class="spinner"></div> Carregando MERCATTO…';
+    const mercatto = await fetchEmpresa('MERCATTO');
+    CACHE['MERCATTO'] = mercatto;
+    RAW = mercatto.slice(); // por enquanto, RAW = MERCATTO
+    setDatasPorFaixa(mercatto);
+    marcarEmpresaPronta('MERCATTO');
+    $$('#filtroEmpresa').value = 'MERCATTO';
+    aplicar();
+  }catch(e){
+    box.className='error';
+    box.textContent = 'Erro ao carregar MERCATTO: ' + (e.message||e);
+    console.error(e);
+    return;
+  }
+
+  // 2) Em segundo plano, carrega as demais
+  const restantes = EMPRESAS.filter(e => e !== 'MERCATTO');
+  for (const emp of restantes){
+    try{
+      const arr = await fetchEmpresa(emp);
+      CACHE[emp] = arr;
+      RAW = Object.values(CACHE).flat(); // atualiza conjunto completo
+      marcarEmpresaPronta(emp);
+
+      // Se o usuário já escolheu essa empresa enquanto carregava, atualiza a tela
+      if ($$('#filtroEmpresa').value === emp) {
+        setDatasPorFaixa(arr);
+        aplicar();
+      }
+    }catch(e){
+      console.warn('Falha ao carregar', emp, e);
+      // marca como erro no seletor
+      const sel = $$('#filtroEmpresa');
+      [...sel.options].forEach(o=>{
+        if (o.value === emp) o.textContent = `${emp} (erro ao carregar)`;
+      });
+    }
+  }
+
+  // 3) Quando tiver pelo menos 2 empresas, permita “Todas”
+  if (Object.keys(CACHE).length >= 2){
+    const optTodas = [...$$('#filtroEmpresa').options].find(o => o.value === '');
+    if (optTodas) optTodas.textContent = 'Todas';
+  }
+}
+
+window.addEventListener('load', ()=>{
+  boot();
 
   ['change','input'].forEach(evt=>{
-    $$('#filtroEmpresa').addEventListener(evt, aplicar);
+    $$('#filtroEmpresa').addEventListener(evt, ()=>{
+      const emp = $$('#filtroEmpresa').value;
+      // ao trocar empresa, ajustar datas para a faixa daquela empresa (se já carregada)
+      if (emp && CACHE[emp] && CACHE[emp].length){
+        setDatasPorFaixa(CACHE[emp]);
+      } else if (!emp && RAW.length){
+        setDatasPorFaixa(RAW);
+      }
+      aplicar();
+    });
     $$('#filtroBusca').addEventListener(evt, aplicar);
     $$('#dataInicio').addEventListener(evt, aplicar);
     $$('#dataFim').addEventListener(evt, aplicar);
